tests/pos/misc/40-poly.ts

function idp<A>(x: A): A { return x; }

let f : (x: number) => number = idp;

assert(f(5) === 5) ;
